# Dinamica_simulator

./: CMakeLists.txt  README.md  resume.res
src/: GUI.cpp  corp.cpp  dinamica_GUI.cpp  dinamica_calc.cpp  help.cpp  main.cpp  simulador_dinamica.hpp  simulador_mecanica.cpp  simulator.cpp  simulator.hpp
